устранил несолько багов и доработал функционал

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,4 +9,8 @@
   border: 5px solid #776e65;
   border-top: 0;
   border-bottom: 0;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
